backup_individuals/sjeng/use_undefined_identifier/c1/bishop_mobility
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/bishop_mobility/src/neval.c:680:6: error: use of undeclared identifier 'bishop_mobility_dir'
v3 = bishop_mobility_dir[v1]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/bishop_mobility/src/obj/neval.o] Error 1
